# relik

./: pyproject.toml  requirements.txt
relik/reader/pytorch_modules/hf/: modeling_relik.py
