[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "numpy>=2.0.0"  # Updated to match your requirements.txt and Py3.10 support
]
build-backend = "setuptools.build_meta"